<resources>
    <string name="app_name">Directory</string>
    <string name="username">Username</string>
    <string name="password">.......</string>
    <string name="show_password">show password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="txt">Enter your Email address here to receive further instruction</string>
    <string name="fp">Forget Password?</string>
    <string name="hidepassword">Hide password</string>
</resources>
