<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="Edit Profile" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="Notifications" />

        <item
            android:id="@+id/search_bar"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="Search" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="Recent" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Setting"/>

        <item
            android:title="PDF Generator"
            android:icon="@drawable/ic_picture_as_pdf_black_24dp"
            android:id="@+id/pdf"
            />

        <item
            android:title="Log Out"
        android:id="@+id/logout"
            android:icon="@drawable/ic_account_box_black_24dp"
        />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
